Remove IDE-specific files and update .gitignore
- Remove .cursor/ and .kiro/ directories from repository
- Update .gitignore to prevent future inclusion of IDE files
- Keep only project-relevant files in the repository

--- a/.gitignore
+++ b/.gitignore
@@ -106,12 +106,15 @@ redis_data/
 .dockerignore
 docker-compose.override.yml
 
-# IDE
+# IDE and Editor files
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
+.cursor/
+.cursorignore
+.kiro/
 
 # OS
 .DS_Store
